syntax = "proto3";

package Net64Protocol.Shared;

message Player {
  string name = 1;
  uint32 character_id = 2;
  uint32 player_id = 3;
}